# SlickScan

./: Cargo.toml  LICENSE.txt  README.md  img.qoi
src/: commonvals.rs  main.rs  util.rs
src/app/: image.rs  mod.rs  scanner.rs
