[package]
name = "slickscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
sane-scan = { git = "https://github.com/tac550/sane-scan"}
env_logger = "0.10.0"
tinyfiledialogs = "3.9.1"
printpdf = "0.6.0"